--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
 
     <div class="background-image-overlay"></div>
 
-    <div id="outer-background-container" data-default-background-img="assets/images/top-panel/background-flipped.jpg" style="background-image:url(assets/images/top-panel/background-flipped.jpg);"></div>
+    <div id="outer-background-container" data-default-background-img="assets/images/top-panel/background-flipped-small.jpg" style="background-image:url(assets/images/top-panel/background-flipped-small.jpg);"></div>
     <!-- end: #outer-background-container -->    
 
     <!-- Outer Container -->
@@ -128,7 +128,7 @@
 
       <section id="main-content" class="clearfix">
         
-        <article id="home" class="section-wrapper clearfix" data-custom-background-img="assets/images/top-panel/background-flipped.jpg">
+        <article id="home" class="section-wrapper clearfix" data-custom-background-img="assets/images/top-panel/background-flipped-small.jpg">
           <div class="content-wrapper clearfix">
             <div class="container">
               <div class="row">
@@ -166,7 +166,7 @@
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
-        <article id="why-code" class="section-wrapper clearfix" data-custom-background-img="assets/images/team-panel/background.jpg">
+        <article id="why-code" class="section-wrapper clearfix" data-custom-background-img="assets/images/team-panel/background-small.jpg">
           <section class="page-block team" id="team">
             <div class="container">
               <h1 class="heading-center new-page-heading h1-resizing">Mushroom Learning</h1>
@@ -186,7 +186,7 @@
           </section>
         </article>
 
-        <article id="about-us" class="section-wrapper clearfix" data-custom-background-img="assets/images/team-panel/background.jpg">
+        <article id="about-us" class="section-wrapper clearfix" data-custom-background-img="assets/images/team-panel/background-small.jpg">
           <section class="page-block team" id="team">
             <div class="container">
               <h2 class="section-title heading-center home-subheaders">About Mushroom Learning</h2>
@@ -200,18 +200,18 @@
           </section>
         </article>
 
-        <article id="team" class="section-wrapper clearfix" data-custom-background-img="assets/images/team-panel/background.jpg">
+        <article id="team" class="section-wrapper clearfix" data-custom-background-img="assets/images/team-panel/background-small.jpg">
           <section class="page-block team" id="team">
             <div class="container">
               <h2 class="section-title heading-center home-subheaders">Mushroom Learning Founders</h2>
               <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-lg-offset-2 col-md-offset-2 col-sm-offset-2">
-                  <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/mike.png" alt="Mushroom Learning Michael"/>
+                  <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/mike.jpg" alt="Mushroom Learning Michael"/>
                   <h3>Michael</h3>
                   <p>Michael brings a passion for education and years of experience in the educational technology space beginning at <a href="http://www.revolutionprep.com" target="_blank">Revolution Prep</a> and most recently at <a href="http://www.edlio.com" target="_blank">Edlio</a>. He is excited to be a part of a great team and help make education accessible to all.</p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4">
-                  <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/muhammad.png" alt="Mushroom Learning Muhammad"/>
+                  <img class="img-circle-thumbnail img-center" src="assets/images/team-panel/muhammad.jpg" alt="Mushroom Learning Muhammad"/>
                   <h3>Muhammad</h3>
                   <p>A former Teen Jeopardy! semi-finalist, Muhammad has been involved with technology and education in many ways. He was previously a product manager and mentor at <a href="http://www.revolutionprep.com" target="_blank">Revolution Prep</a>, a developer at <a href="http://www.fullscreen.net" target="_blank">Fullscreen</a>, and most recently helped <a href="http://www.makersquare.com" target="_blank">MakerSquare</a> design curriculum for kids.</p>
                 </div>
