--- a/public/summer-camp.html
+++ b/public/summer-camp.html
@@ -440,18 +440,12 @@
               
               <div class="col-lg-6 col-md-6 col-sm-6 col-lg-offset-3 col-md-offset-3 col-sm-offset-3">
                 <a class="typeform-share btn btn-primary btn-lg active typeform-button round-3" href="http://bit.ly/coding-la" target="_blank">Registration page</a>
-              </div>
-            </div>
-            <div class="container">
-              <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+                <br><br>
+                <div class="text-center">
                   <a class="typeform-share btn btn-primary btn-lg active typeform-button2 round-4" role="button" href="https://mushroomlearning.typeform.com/to/g6IqRe" data-mode="2" target="_blank" >Set up a time to talk</a>
                   <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-                  <h3 style="margin-top: -1em;">Or call us at 424-244-9794</h3>
+                  <br>
+                  <h3>Or call us at 424-244-9794</h3>
                 </div>
               </div>
             </div>
