changed brand-primary color

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Bootstrap Theme by @heyallanmoreno</title>
+	<title>Mushroom Learning -- We Teach Code!</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="author" content="">
+  <meta name="description" content="Welcome to Mushroom Learning! We teach kids to code in HTML, CSS, and JavaScript. We are hosting classes in Los Angeles, California.">
+	<meta name="author" content="Muhammad Meigooni">
 	<link rel="stylesheet" href="assets/styles/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/styles/css/font-awesome.css">
 	<link rel="stylesheet" href="assets/styles/css/theme.css">
@@ -29,7 +29,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="index.html">
-					<img src="assets/images/logo.png" alt=""> Aventador
+					<img src="assets/images/logo.png" alt="">
 				</a>
 			</div>
 			<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
@@ -102,12 +102,12 @@
 	</section>
 
 	<!-- About -->
-	<section class="wrapper-sm" id ="about">
+	<section class="wrapper-lg" id="about">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h1>We are the ultimate creative minds</h1>
-					<p class="lead">Simplicity is the ultimate sofistication</p>
+					<h1>Mushroom Learning</h1>
+					<p class="lead">We teach code.</p>
 				</div>
 			</div>
 		</div>
@@ -117,28 +117,20 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-6">
-					<h2>Our Story</h2>
-					<p class="lead">You have to know what's coming next here</p>
-					<p>Aventador is the industry leader of customized macro-macro-nano-dynamic virtual, interactive Total Quality Management. Without sufficient bricks-and-clicks, cutting-edge e-commerce, applications are forced to become customer-directed. Think ultra-back-end.</p>
+					<h2>Why Code?</h2>
+					<p class="lead"></p>
+					<p>Mushroom Learning started in Austin, TX as a subset of <a href="http://www.makersquare.com">MakerSquare's</a> adult coding program. From promotional workshops to longitudinal courses, Mushroom Learning was recently recognized by Google and code.org for delivering coding education to local public, private, and charter schools.</p>
 					<h2>There's even more to Us</h2>
 					<p class="lead">Aventador is the industry leader of end-to-end compliance</p>
 					<p>Without preplanned media sourcing, applications are forced to become turn-key. If all of this may seem disorienting to you, that's because it is! Without sufficient ROI metrics, mission-critical, resource-constrained co-branded CAD are forced to become 24/7. Without C2C, you will lack obfuscation. Imagine a combination of XSL and SMIL.</p>
 				</div>
 				<div class="col-sm-6">
-					<h2>Here we are</h2>
-					<p>Do you have a strategy to become proactive, co-branded? A company that can upgrade defiantly will (at some point) be able to strategize faithfully. What does it really mean to transition "strategically"? Do you have a strategy to become six-sigma?</p>
-					<img class="pull-left" src="assets/images/icon-4.png" alt="">
-					<ul class="list-unstyled">
-						<li><i class="icon-ok"></i> Proficiency in technology</li>
-						<li><i class="icon-ok"></i> Fast and acurate response</li>
-						<li><i class="icon-ok"></i> Well informed desicions</li>
-						<li><i class="icon-ok"></i> High quality services</li>
-						<li><i class="icon-ok"></i> Best known customer service</li>
-						<li><i class="icon-ok"></i> Fast ticket systems</li>
-						<li><i class="icon-ok"></i> Proven reliability</li>
-					</ul>
-					<p class="lead">There's nothing we cannot help you with.</p>
-					<p>If all of this may seem disorienting to you, that's because it is! Without sufficient ROI metrics, mission-critical, resource-constrained co-branded CAD are forced to become.</p>
+					<h2>Why Code?</h2>
+					<div class="videoWrapper">
+						<iframe width="560" height="315" src="//www.youtube.com/embed/nKIu9yen5nc?rel=0" frameborder="0" allowfullscreen></iframe>
+					</div>
+					<p>Computer science develops students’ computational and critical thinking skills and shows them how to create, not simply use, new technologies. Mushroom Learning believes this fundamental knowledge is needed to prepare students for the 21st century, regardless of their ultimate field of study or occupation.</p>
+          <p>At Mushroom Learning, students have a chance to get introduced to computer science before taking a class at the AP level. Mushroom Learning programs focus on front-end web development languages like HTML, CSS, and JavaScript. These languages have a more forgiving syntax and give immediate visual feedback to students. They are also currently the most in demand coding languages in industry. These reasons combine to give Mushroom Learning students a decided edge in computer science.</p>
 				</div>
 			</div>
 		</div>
