--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,8 @@
 					<li><a href="#team">Team</a></li>
 					<li><a href="#pricing">Pricing</a></li>
 					<li><a href="#testimonials">Testimonials</a></li>
-					<li><a href="#contact">Contact</a></li>
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+						<a href="#" class="dropdown-toggle nav-bar-highlight" data-toggle="dropdown">Home <b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="#">Action</a></li>
 							<li><a href="#">Another action</a></li>
@@ -52,6 +51,7 @@
 							<li><a href="#">One more separated link</a></li>
 						</ul>
 					</li>
+					<li><a href="/faq">FAQ</a></li>
 				</ul>
 			</div>
 		</div>
@@ -69,18 +69,18 @@
 			<!-- carousel -->
 			<div class="carousel-inner">
 				<div class="item active">
-					<img src="assets/images/slide-1.jpg" alt="">
-					<div class="carousel-caption visible-lg">
-						<h1>Technology is the path to future. <br>
-							That's the right path.</h1>
-						<p class="lead">Our platform automatically creates Environment Variables.</p><br>
+					<img src="assets/images/why-learn-code.jpg" alt="Why Learn Code?">
+					<div class="carousel-caption visible-lg" id="panel-top-text">
+            <h2 class="h1-resizing">Learn to <span class="top-panel-emphasis">code.</span></h2>
+            <h2 class="h1-resizing">Solve <span class="top-panel-emphasis">problems.</span></h2>
+            <h2 class="h1-resizing">Shape the <span class="top-panel-emphasis">future.</span></h2>
+            <p id="top-panel-subtext">Join Mushroom Learning's one-week summer camp that teaches students computational thinking, problem solving, and building a webpage from scratch using HTML, CSS, and JavaScript.</p>
 					</div>
 				</div>
 				<div class="item">
 					<img src="assets/images/slide-2.jpg" alt="">
 					<div class="carousel-caption visible-lg">
-						<h1>We help you being awesome at what you really do</h1>
-						<p class="lead">Providing the best service so you can concentrate on your thing</p>
+						<h1>Solve Problems.</h1>
 					</div>
 				</div>
 				<div class="item">
@@ -147,8 +147,8 @@
 				</div>
 				<div class="col-sm-4">
 					<div class="tile">
-						<div class="hexagon"><i class="icon-mobile-phone icon-4x"></i></div>
-						<h4>Premium Sevice</h4>
+						<div class="hexagon"><i class="icon-sun icon-4x"></i></div>
+						<h4>Summer Camp</h4>
 						<p>You can use this template as your blog or portfolio or whatever you wannt! Vernum looks great on every device, check it now and resize your browser!</p>
 						<a href="#" class="btn btn-default btn-large">Learn even more &raquo;</a>
 					</div>
@@ -156,8 +156,8 @@
 				</div>
 				<div class="col-sm-4">
 					<div class="tile">
-						<div class="hexagon"><i class="icon-desktop icon-4x"></i></div>
-						<h4>Premium Sevice</h4>
+						<div class="hexagon"><i class="icon-group icon-4x"></i></div>
+						<h4>Fall Classes</h4>
 						<p>You can use this template as your blog or portfolio or whatever you wannt! Vernum looks great on every device, check it now and resize your browser!</p>
 						<a href="#" class="btn btn-default btn-large">Learn even more &raquo;</a>
 					</div>
@@ -165,8 +165,8 @@
 				</div>
 				<div class="col-sm-4">
 					<div class="tile">
-						<div class="hexagon"><i class="icon-tablet icon-4x"></i></div>
-						<h4>Premium Sevice</h4>
+						<div class="hexagon"><i class="icon-user icon-4x"></i></div>
+						<h4>Private Tutoring</h4>
 						<p>You can use this template as your blog or portfolio or whatever you wannt! Vernum looks great on every device, check it now and resize your browser!</p>
 						<a href="#" class="btn btn-default btn-large">Learn even more &raquo;</a>
 					</div>
