--- a/public/index.html
+++ b/public/index.html
@@ -58,46 +58,22 @@
 	</nav>
 
 	<!-- Carousel -->
-	<section>
-		<div id="my-carousel" class="carousel slide">
-			<!-- indicators -->
-			<ol class="carousel-indicators">
-				<li data-target="#my-carousel" data-slide-to="0" class="active"></li>
-				<li data-target="#my-carousel" data-slide-to="1"></li>
-				<li data-target="#my-carousel" data-slide-to="2"></li>
-			</ol>
-			<!-- carousel -->
-			<div class="carousel-inner">
-				<div class="item active">
-					<img src="assets/images/why-learn-code.jpg" alt="Why Learn Code?">
-					<div class="carousel-caption visible-lg" id="panel-top-text">
-            <h2 class="h1-resizing">Learn to <span class="top-panel-emphasis">code.</span></h2>
-            <h2 class="h1-resizing">Solve <span class="top-panel-emphasis">problems.</span></h2>
-            <h2 class="h1-resizing">Shape the <span class="top-panel-emphasis">future.</span></h2>
-            <p id="top-panel-subtext">Join Mushroom Learning's one-week summer camp that teaches students computational thinking, problem solving, and building a webpage from scratch using HTML, CSS, and JavaScript.</p>
-					</div>
-				</div>
-				<div class="item">
-					<img src="assets/images/slide-2.jpg" alt="">
-					<div class="carousel-caption visible-lg">
-						<h1>Solve Problems.</h1>
-					</div>
-				</div>
-				<div class="item">
-					<img src="assets/images/slide-3.jpg" alt="">
-					<div class="carousel-caption visible-lg">
-						<h1>Small enough to be personal. Large enough to be reliable.</h1>
-						<p class="lead">Aventador is a small friendly and fast software company from the web.</p>
-					</div>
-				</div>
+	<section id="top-panel">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 text-left">
+	        <h2 class="h1-resizing">Learn to <span class="top-panel-emphasis">code.</span></h2>
+	        <h2 class="h1-resizing">Solve <span class="top-panel-emphasis">problems.</span></h2>
+	        <h2 class="h1-resizing">Shape the <span class="top-panel-emphasis">future.</span></h2>
+	        <p id="top-panel-subtext-1">Join one of Mushroom Learning's awesome coding programs!</p>
+	        <ul>
+	        	<li><img src="assets/images/html5-rounded.png" alt=""></li>
+	        	<li><img src="assets/images/css-rounded.png" alt=""></li>
+	        	<li><img src="assets/images/js-rounded.png" alt=""></li>
+	        	<li><img src="assets/images/minecraft-rounded.png" alt=""></li>
+	        </ul>
+	      </div>
 			</div>
-			<!-- Controls -->
-			<a class="left carousel-control" href="#my-carousel" data-slide="prev">
-				<span class="icon-prev"></span>
-			</a>
-			<a class="right carousel-control" href="#my-carousel" data-slide="next">
-				<span class="icon-next"></span>
-			</a>
 		</div>
 	</section>
 
