--- a/public/index.html
+++ b/public/index.html
@@ -34,22 +34,25 @@
 			</div>
 			<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#home">Home</a></li>
-					<li><a href="#about">About</a></li>
-					<li><a href="#programs">Programs</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#team">Team</a></li>
-					<li><a href="#pricing">Pricing</a></li>
-					<li><a href="#testimonials">Testimonials</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle nav-bar-highlight" data-toggle="dropdown">Home <b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="#about">About</a></li>
 							<li><a href="#programs">Coding Programs</a></li>
-							<li><a href="#">Separated link</a></li>
-							<li><a href="#">One more separated link</a></li>
+							<li><a href="#testimonials">Testimonials</a></li>
+							<li><a href="#team">Team</a></li>
 						</ul>
 					</li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Home <b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li><a href="#about">About</a></li>
+							<li><a href="#programs">Coding Programs</a></li>
+							<li><a href="#testimonials">Testimonials</a></li>
+							<li><a href="#team">Team</a></li>
+						</ul>
+					</li>
+					<li><a href="/faq">Workshops</a></li>
 					<li><a href="/faq">FAQ</a></li>
 				</ul>
 			</div>
@@ -187,149 +190,43 @@
 					</div>
 					<br class="spacer-lg">
 				</div>
-			</div><!-- /.row -->
-			<br class="spacer-md">
-			<hr>
-			<br class="spacer-lg">
+			</div><!-- /.row <--></-->
+		</div><!-- /.container -->
+	</section>	
+
+	<!-- Testimonials -->
+	<section class="wrapper-lg bg-alt" id="testimonials">
+		<div class="container">
 			<div class="row">
-				<div class="col-sm-4">
-					<h2>We Succeed</h2>
-					<p class="lead">We know our stuff</p>
-					<p>Our platform automatically creates Environment Variables for cache credentials: name, host, and port. This allows you to use server variables in place of credentials and to connect to local, staging or production caches without modifying application code.</p>
-					<hr>
-					<p class="lead">All typical bootstrap colors available &raquo;</p>
+				<div class="col-lg-12 text-center">
+					<h1>Testimonials</h1>
+					<p class="lead">Yeah yeah yeah</p>
 				</div>
-				<div class="col-sm-8">
-					<p class="lead">Sociam Media Success</p>
-					<div class="progress">
-						<div class="progress-bar" role="progress-bar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
-						<span class="sr-only">80% Complete</span>
-					</div>
-					<p class="lead">Financial Topics Reached</p>
-					<div class="progress">
-						<div class="progress-bar" role="progress-bar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
-						<span class="sr-only">80% Complete</span>
-					</div>
-					<p class="lead">Platform Requests Managed</p>
-					<div class="progress">
-						<div class="progress-bar" role="progress-bar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
-						<span class="sr-only">80% Complete</span>
-					</div>
+				<div class="col-lg-4">
+					<blockquote class="testimonial"> 
+						<p>You don’t need to see his identification. These aren’t the droids you’re looking for. He can go about his business. Move along.</p> 
+					</blockquote> 
+					<div class="arrow-down"></div> 
+					<p class="testimonial-author">Obi-Wan Kenobi | <span>Jedi Master</span></p>
 				</div>
+				<div class="col-lg-4">
+					<blockquote class="testimonial"> 
+						<p>You don’t need to see his identification. These aren’t the droids you’re looking for. He can go about his business. Move along.</p> 
+					</blockquote> 
+					<div class="arrow-down"></div> 
+					<p class="testimonial-author">Obi-Wan Kenobi | <span>Jedi Master</span></p>
+				</div>
+				<div class="col-lg-4">
+					<blockquote class="testimonial"> 
+						<p>You don’t need to see his identification. These aren’t the droids you’re looking for. He can go about his business. Move along.</p> 
+					</blockquote> 
+					<div class="arrow-down"></div> 
+					<p class="testimonial-author">Obi-Wan Kenobi | <span>Jedi Master</span></p>
+				</div><!-- /.col-gl-12 -->
 			</div><!-- /.row -->
 		</div><!-- /.container -->
 	</section>
 
-	<!-- Portfolio -->
-	<section class="wrapper-lg bg-alt" id="portfolio">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<h1>Our Portfolio</h1>
-					<p class="lead">Don't just take our word for it:</p>
-					<ul id="filters" class="tags">
-						<li><span>Filter Items:</span></li>
-						<li><a class="active" href="#" data-filter="*">Show All</a></li>
-						<li><a href="#" data-filter=".cat-1">styles</a></li>
-						<li><a href="#" data-filter=".cat-2">layout</a></li>
-						<li><a href="#" data-filter=".cat-3">letterpress</a></li>
-						<li><a href="#" data-filter=".cat-1">magazine</a></li>
-						<li><a href="#" data-filter=".cat-2">menu</a></li>
-						<li><a href="#" data-filter=".cat-3">editorial</a></li>
-						<li><a href="#" data-filter=".cat-1">type</a></li>
-						<li><a href="#" data-filter=".cat-2">paper</a></li>
-					</ul>
-					<br class="spacer-lg">
-
-					<!--Portfolio Items-->
-					<ul id="portfolio-container" class="thumbnail-grid">
-						<li class="col-md-3 cat-1">
-							<div class="thumbnail">
-								<a href="assets/images/item_large.png" data-type="fancybox-item" rel="album" >
-									<img src="assets/images/item_small.png" alt="">
-								</a>
-								<div class="caption">
-									<h5><a href="#">Psd Wall Poster Text Effect</a></h5>
-								</div>
-							</div>
-						</li>
-						<li class="col-md-3 cat-2">
-							<div class="thumbnail">
-								<a href="assets/images/item_large.png" data-type="fancybox-item" rel="album" >
-									<img src="assets/images/item_small.png" alt="">
-								</a>
-								<div class="caption">
-									<h5><a href="#">Graphic Perspective Mockup</a></h5>
-								</div>
-							</div>
-						</li>
-						<li class="col-md-3 cat-3">
-							<div class="thumbnail">
-								<a href="assets/images/item_large.png" data-type="fancybox-item" rel="album" >
-									<img src="assets/images/item_small.png" alt="">
-								</a>
-								<div class="caption">
-									<h5><a href="#">Illustrations Retro Comp Effect</a></h5>
-								</div>
-							</div>
-						</li>
-						<li class="col-md-3 cat-2">
-							<div class="thumbnail">
-								<a href="assets/images/item_large.png" data-type="fancybox-item" rel="album" >
-									<img src="assets/images/item_small.png" alt="">
-								</a>
-								<div class="caption">
-									<h5><a href="#">Dark Essential Switches Psd</a></h5>
-								</div>
-							</div>
-						</li>
-						<li class="col-md-3 cat-2">
-							<div class="thumbnail">
-								<a href="assets/images/item_large.png" data-type="fancybox-item" rel="album" >
-									<img src="assets/images/item_small.png" alt="">
-								</a>
-								<div class="caption">
-									<h5><a href="#">iPhone 5 Psd Landscape Mockup</a></h5>
-								</div>
-							</div>
-						</li>
-						<li class="col-md-3 cat-1">
-							<div class="thumbnail">
-								<a href="assets/images/item_large.png" data-type="fancybox-item" rel="album" >
-									<img src="assets/images/item_small.png" alt="">
-								</a>
-								<div class="caption">
-									<h5><a href="#">Flat Desing Modern Design</a></h5>
-								</div>
-							</div>
-						</li>
-						<li class="col-md-3 cat-1">
-							<div class="thumbnail">
-								<a href="assets/images/item_large.png" data-type="fancybox-item" rel="album" >
-									<img src="assets/images/item_small.png" alt="">
-								</a>
-								<div class="caption">
-									<h5><a href="#">Switch UI Retina Display</a></h5>
-								</div>
-							</div>
-						</li>
-						<li class="col-md-3 cat-2">
-							<div class="thumbnail">
-								<a href="assets/images/item_large.png" data-type="fancybox-item" rel="album" >
-									<img src="assets/images/item_small.png" alt="">
-								</a>
-								<div class="caption">
-									<h5><a href="#">Water Bubbles Master Piece</a></h5>
-								</div>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<!-- Team -->
 	<section class="wrapper-lg" id="team">
 		<div class="container">
 			<div class="row">
@@ -340,13 +237,13 @@
 				<div class="col-lg-12">
 					<!--Team Members-->
 					<ul class="thumbnail-badges">
-						<li class="col-md-3">
-							<div class="thumbnail">
-								<img class="img-circle" src="assets/images/user_1.jpg" alt="">
+						<li class="col-md-4 col-md-offset-2">
+							<div class="thumbnail ">
+								<img class="img-circle" src="assets/images/mike.jpg" alt="">
 								<div class="caption">
-									<h4>Calisto MT</h4>
-									<p class="ribbon">Chief Designer</p>
-									<p>Pixel pusher, code dabbler, Dominos shareholder, all round ruddy good bloke from blighty.</p>
+									<h4>Michael</h4>
+									<p class="ribbon">Ugly Duckling</p>
+									<p>Michael brings a passion for education and years of experience in the educational technology space beginning at <a href="http://www.revolutionprep.com" target="_blank">Revolution Prep</a> and most recently at <a href="http://www.edlio.com" target="_blank">Edlio</a>. He is excited to be a part of a great team and help make education accessible to all.</p>
 									<ul class="social-profiles">
 										<li><a class="twitter" href="#"><i class="icon-twitter"></i></a></li>
 										<li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
@@ -356,45 +253,13 @@
 								</div>
 							</div>
 						</li>
-						<li class="col-md-3">
+						<li class="col-md-4">
 							<div class="thumbnail">
-								<img class="img-circle" src="assets/images/user_2.jpg" alt="">
+								<img class="img-circle" src="assets/images/muhammad.jpg" alt="">
 								<div class="caption">
-									<h4>Cambria Serif</h4>
-									<p class="ribbon">Front End Engeneer</p>
-									<p>Well rounded designer with a happy appreciation for good type and Jack Daniels. And pizza.</p>
-									<ul class="social-profiles">
-										<li><a class="twitter" href="#"><i class="icon-twitter"></i></a></li>
-										<li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
-										<li><a class="google-plus" href="#"><i class="icon-google-plus"></i></a></li>
-										<li><a class="pinterest" href="#"><i class="icon-pinterest"></i></a></li>
-									</ul>
-								</div>
-							</div>
-						</li>
-						<li class="col-md-3">
-							<div class="thumbnail">
-								<img class="img-circle" src="assets/images/user_3.jpg" alt="">
-								<div class="caption">
-									<h4>Cooper Black</h4>
-									<p class="ribbon">Web Programmer</p>
-									<p>Web developer from the North of Scotland. Recharges overnight. Has Matrix vision.</p>
-									<ul class="social-profiles">
-										<li><a class="twitter" href="#"><i class="icon-twitter"></i></a></li>
-										<li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
-										<li><a class="google-plus" href="#"><i class="icon-google-plus"></i></a></li>
-										<li><a class="pinterest" href="#"><i class="icon-pinterest"></i></a></li>
-									</ul>
-								</div>
-							</div>
-						</li>
-						<li class="col-md-3">
-							<div class="thumbnail">
-								<img class="img-circle" src="assets/images/user_4.jpg" alt="">
-								<div class="caption">
-									<h4>Lucida Sans</h4>
-									<p class="ribbon">Back End Developer</p>
-									<p>Code masher and the lone American of the lot. Fueled by fine Italian espresso. Buono.</p>
+									<h4>Muhammad</h4>
+									<p class="ribbon">Swan</p>
+									<p>A former Teen Jeopardy! semi-finalist, Muhammad has been involved with technology and education in many ways. He was previously a product manager and mentor at <a href="http://www.revolutionprep.com" target="_blank">Revolution Prep</a>, a developer at <a href="http://www.fullscreen.net" target="_blank">Fullscreen</a>, and most recently helped <a href="http://www.makersquare.com" target="_blank">MakerSquare</a> design curriculum for kids.</p>
 									<ul class="social-profiles">
 										<li><a class="twitter" href="#"><i class="icon-twitter"></i></a></li>
 										<li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
@@ -491,34 +356,6 @@
 							<a href="#" class="btn btn-primary btn-large">Get it now! &raquo;</a>
 						</div>
 					</div><!-- /.plan -->
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<!-- Testimonials -->
-	<section class="wrapper-sm" id="testimonials">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<h2>A final word you might want to hear.</h2>
-					<p class="lead">You can use this template as your blog or portfolio or whatever you wannt!</p>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="wrapper-sm bg-alt">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-4">
-					<blockquote class="twitter-tweet"><p>Pro tip: if you write to me in spanish or portuguese, sometimes I respond purely as an excuse to get to use such beautiful languages.</p>&mdash; Pamela Fox (@pamelafox) <a href="https://twitter.com/pamelafox/statuses/338409423179501568">May 25, 2013</a></blockquote>
-				</div>
-				<div class="col-sm-4">
-					<blockquote class="twitter-tweet"><p>Web developers have it all: money, freedom, respect. But is there value in what we do? <a href="http://t.co/3RjmPOdaah">http://t.co/3RjmPOdaah</a> This is a hell of a read.</p>&mdash; Brad Frost (@brad_frost) <a href="https://twitter.com/brad_frost/statuses/348948549226082304">June 23, 2013</a></blockquote>
-				</div>
-				<div class="col-sm-4">
-					<blockquote class="twitter-tweet"><p>Kinda blown away by the responses to my recent post. Thank you! Now I want to get others sharing their views on the same subject.</p>&mdash; Ana Hevesi (@anoemi) <a href="https://twitter.com/anoemi/statuses/346741976755998721">June 17, 2013</a></blockquote>
 				</div>
 			</div>
 		</div>
