--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,7 @@
 						</ul>
 					</li>
 					<li><a href="/faq">Workshops</a></li>
+					<li><a href="/summer-camp">Summer Camp</a></li>
 					<li><a href="/faq">FAQ</a></li>
 				</ul>
 			</div>
@@ -158,7 +159,7 @@
 					<div class="tile">
 						<div class="hexagon"><i class="icon-cogs icon-4x"></i></div>
 						<h4>Workshops</h4>
-						<p>You can use this template as your blog or portfolio or whatever you wannt! Vernum looks great on every device, check it now and resize your browser!</p>
+						<p>This is the mini portobello! Mushroom Learning's coding workshops give students a great introduction into the world of basic programming languages and web design. Topics include the skeleton of a website using html, css and javascript.</p>
 						<a href="#" class="btn btn-default btn-large">Learn more &raquo;</a>
 					</div>
 					<br class="spacer-lg">
@@ -167,7 +168,7 @@
 					<div class="tile">
 						<div class="hexagon"><i class="icon-sun icon-4x"></i></div>
 						<h4>Summer Camp</h4>
-						<p>Have you ever wanted to build a website from scratch? We use a combination of guided exercises, independent challenges, and unplugged activities to teach the fundamentals of HTML, CSS, and a touch of JavaScript. No coding experience required!</p>
+						<p>This is the morel of our mushroom medley. Mushroom Learnings summer camp is a fun way to learn web design in an immersive educational environment and enjoy the summer with friends. In addition to coding, our camp includes fun unplugged games and artificial intelligence activities. </p>
 						<a href="#" class="btn btn-default btn-large">Learn more &raquo;</a>
 					</div>
 					<br class="spacer-lg">
@@ -175,8 +176,8 @@
 				<div class="col-sm-3">
 					<div class="tile">
 						<div class="hexagon"><i class="icon-group icon-4x"></i></div>
-						<h4>Fall Classes</h4>
-						<p>You can use this template as your blog or portfolio or whatever you wannt! Vernum looks great on every device, check it now and resize your browser!</p>
+						<h4>THE MUSHROOM PROGRAM</h4>
+						<p>This is program is the full Shiitake. Our 8-week program covers coding languages html, css, and javascript in an our proprietary learning environment. In addition to our web design course, we will be offering a Minecraft modding course that combines JavaScript with the fun of gaming.</p>
 						<a href="#" class="btn btn-default btn-large">Learn more &raquo;</a>
 					</div>
 					<br class="spacer-lg">
@@ -184,8 +185,8 @@
 				<div class="col-sm-3">
 					<div class="tile">
 						<div class="hexagon"><i class="icon-user icon-4x"></i></div>
-						<h4>Private Tutoring</h4>
-						<p>You can use this template as your blog or portfolio or whatever you wannt! Vernum looks great on every device, check it now and resize your browser!</p>
+						<h4>Pair Programming</h4>
+						<p>Our mentors will help your student design and execute on a web project. From scoping out the initial idea, to writing specifications, and finally producing the final product, the mentors will give individualized attention to any of the ideas that mushroom out of your imagination.</p>
 						<a href="#" class="btn btn-default btn-large">Learn more &raquo;</a>
 					</div>
 					<br class="spacer-lg">
@@ -275,94 +276,8 @@
 		</div><!-- /.container -->
 	</section>
 
-	<!-- Pricing -->
-	<section class="wrapper-lg bg-alt" id="pricing">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<h1>Pricing</h1>
-					<p class="lead">Choice is yours</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-4">
-					<div class="plan">
-						<div class="plan-name">
-							<h3>Starter Pack</h3>
-						</div>
-						<div class="plan-info">
-							<p>Get a helping hand with our products in the members only premium area</p>
-						</div>
-						<div class="plan-price">
-							<h1>$12 <small>/month</small></h1>
-						</div>
-						<ul class="plan-features">
-							<li><i class="icon-ok"></i> Unlimited Support <i class="icon-info-sign" data-toggle="tooltip" data-original-title="Restrictions apply"></i></li>
-							<li><i class="icon-ok"></i> Basic Options</li>
-							<li><i class="icon-remove"></i> 100GB Storage</li>
-							<li><i class="icon-remove"></i> Ad Free Streaming</li>
-						</ul>
-						<div class="plan-cta">
-							<p>Unlimited ad-free streaming, unlimited viewers</p>
-							<br class="spacer-md">
-							<a href="#" class="btn btn-default btn-large">Get it now! &raquo;</a>
-						</div>
-					</div><!-- /.plan -->
-				</div>
-				<div class="col-md-4">
-					<div class="plan">
-						<div class="plan-name">
-							<h3>Starter Pack</h3>
-						</div>
-						<div class="plan-info">
-							<p>Get a helping hand with our products in the members only premium area</p>
-						</div>
-						<div class="plan-price">
-							<h1>$24 <small>/month</small></h1>
-						</div>
-						<ul class="plan-features">
-							<li><i class="icon-ok"></i> Unlimited Support <i class="icon-info-sign" data-toggle="tooltip" data-original-title="Restrictions apply"></i></li>
-							<li><i class="icon-ok"></i> Basic Options</li>
-							<li><i class="icon-remove"></i> 100GB Storage</li>
-							<li><i class="icon-remove"></i> Ad Free Streaming</li>
-						</ul>
-						<div class="plan-cta">
-							<p>Unlimited ad-free streaming, unlimited viewers</p>
-							<br class="spacer-md">
-							<a href="#" class="btn btn-default btn-large">Get it now! &raquo;</a>
-						</div>
-					</div><!-- /.plan -->
-				</div>
-				<div class="col-md-4">
-					<div class="plan plan-featured">
-						<div class="plan-name">
-							<h3>Starter Pack</h3>
-						</div>
-						<div class="plan-info">
-							<p>Get a helping hand with our products in the members only premium area</p>
-						</div>
-						<div class="plan-price">
-							<h1>$48 <small>/month</small></h1>
-						</div>
-						<ul class="plan-features">
-							<li><i class="icon-ok"></i> Unlimited Support <i class="icon-info-sign" data-toggle="tooltip" data-original-title="Restrictions apply"></i></li>
-							<li><i class="icon-ok"></i> Basic Options</li>
-							<li><i class="icon-remove"></i> 100GB Storage</li>
-							<li><i class="icon-remove"></i> Ad Free Streaming</li>
-						</ul>
-						<div class="plan-cta">
-							<p>Unlimited ad-free streaming, unlimited viewers</p>
-							<br class="spacer-md">
-							<a href="#" class="btn btn-primary btn-large">Get it now! &raquo;</a>
-						</div>
-					</div><!-- /.plan -->
-				</div>
-			</div>
-		</div>
-	</section>
-
 	<!-- contact -->
-	<section class="wrapper-lg" id="contact">
+	<section class="wrapper-lg bg-alt" id="contact">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
