--- a/public/workshops.html
+++ b/public/workshops.html
@@ -6,18 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Welcome to Mushroom Learning! We teach kids to code in HTML, CSS, and JavaScript. We are hosting classes in Los Angeles, California.">
   <meta name="author" content="Muhammad Meigooni">
-
-  <!-- CSS -->
   <link rel="stylesheet" href="assets/styles/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/styles/css/font-awesome.css">
   <link rel="stylesheet" href="assets/styles/css/theme.css">
   <link rel="stylesheet" href="assets/fancybox/jquery.fancybox-1.3.4.css">
   <link rel="stylesheet" href="assets/styles/css/isotope.css">
-  <link href="assets/js/owl-carousel/owl.carousel.css" rel="stylesheet">
-  <link href="assets/js/owl-carousel/owl.theme.css" rel="stylesheet">
-  <link href="assets/js/owl-carousel/owl.transitions.css" rel="stylesheet">
-
-  <!-- JavaScript -->
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <script src="assets/js/respond.min.js"></script>
@@ -71,86 +64,38 @@
   <section class="wrapper-lg" id="about">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12 text-center">
+        <div class="col-lg-6 col-lg-offset-3 text-center">
           <h1>Mushroom Learning</h1>
-          <p class="lead">Summer Camp Details</p>
+          <p class="lead">By the end of our 1-hour workshop, they will understand the building blocks of an environment they spend a lot of time in -- a website. </p>
         </div>
       </div>
     </div>
-  </section>
-
-  <!-- Sample Day -->
-  <section class="wrapper-lg bg-alt">
-    <div class="container">
-      <div class="row text-center h2-resize">
-        <h2>Sample day yo</h2>
-      </div>
-      <div class="row">
-        <div id="sample-day-carousel">
-          <div class="item"><img src="assets/images/check-in.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/review.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/robot.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/coding-languages-am.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/healthy-break-am.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/digital-design.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/linguistics-activity.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/review-activity.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/lunch-and-yoga.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/innovation-challenge.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/coding-languages-pm.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/healthy-break-pm.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/artificial-intelligence-activity.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/progress-check.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/pick-up.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/optional-study-hall.png" alt="Owl Image"></div>
-        </div>
-      </div>
-    </div>
-
   </section>
 
   <!-- Pricing -->
-  <section class="wrapper-lg" id="pricing">
+  <section class="wrapper-lg bg-alt" id="pricing">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center h2-resize">
-          <h2>Coding Camp Details</h2>
+          <h2>Coding Workshop Details</h2>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4">
-          <div class="plan">
-            <div class="plan-name">
-              <h3>Location</h3>
-            </div>
-            <div class="plan-info">
-            </div>
-            <div class="plan-price">
-            </div>
-            <ul class="plan-features box-text">
-              <li> 
-                <p>The City School</p>
-                <p>11625 West Pico Blvd</p>
-                <p>Los Angeles, CA 90064</p>
-              </li>
-            </ul>
-          </div><!-- /.plan -->
-        </div>
         <div class="col-md-4">
           <div class="plan plan-featured">
             <div class="plan-name">
               <h3>Pricing</h3>
             </div>
             <div class="plan-info">
+              <p>Using Mozilla's X-Ray Goggles, students will learn how the skeleton of a website is structured. By the end of the workshop, students will understand basic HTML tags and also remix a website.</p>
             </div>
             <div class="plan-price">
-              <h1>$349 <small>/week</small></h1>
+              <h1>Free!</h1>
             </div>
             <ul class="plan-features">
-              <li><i class="icon-ok"></i> Full day option</li>
-              <li><i class="icon-ok"></i> Complete approach</li>
-              <li><i class="icon-ok"></i> Lunch and Yoga included</li>
-              <li><i class="icon-ok"></i> Optional after class study hall ($10/day)</li>
+              <li>Hosted after school and on weekends</li>
+              <li>Learn a skill after one session</li>
+              <li>Complete a project in an hour</li>
             </ul>
             <div class="plan-cta">
               <br class="spacer-md">
@@ -158,22 +103,44 @@
             </div>
           </div><!-- /.plan -->
         </div>
-        <div class="col-md-4">
-          <div class="plan">
-            <div class="plan-name">
-              <h3>Dates</h3>
-            </div>
-            <div class="plan-info">
-            </div>
-            <div class="plan-price">
-            </div>
-            <ul class="plan-features box-text">
-              <li>July 21st - July 25th</li>
-              <li>July 28th - August 1st</li>
-              <li>August 4th - August 8th</li>
-            </ul>
-            
-          </div><!-- /.plan -->
+        <div class="col-md-8">
+          <div class="col-md-6">
+            <div class="plan">
+              <div class="plan-name">
+                <h3>Location</h3>
+              </div>
+              <div class="plan-info">
+              </div>
+              <div class="plan-price">
+              </div>
+              <ul class="plan-features box-text-address">
+                <li> 
+                  <p>The City School</p>
+                  <p>11625 West Pico Blvd</p>
+                  <p>Los Angeles, CA 90064</p>
+                </li>
+              </ul>
+            </div><!-- /.plan -->
+          </div>
+          <div class="col-md-6">
+            <div class="plan">
+              <div class="plan-name">
+                <h3>Dates</h3>
+              </div>
+              <div class="plan-info">
+              </div>
+              <div class="plan-price">
+              </div>
+              <ul class="plan-features box-text">
+                <li>July 13th: 2:00pm - 3:00pm</li>
+                <li>July 19th: 10:00am - 11:00am</li>
+              </ul>
+            </div><!-- /.plan -->
+          </div>
+          <div class="col-md-12">
+            <div class="typeform-widget" data-url="https://mushroomlearning.typeform.com/to/BduU75" data-text="workshop-request" style="width:100%;height:318px;"></div>
+            <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+          </div>
         </div>
       </div>
     </div>
@@ -250,16 +217,8 @@
   <script src="assets/fancybox/jquery.easing-1.3.pack.js"></script>
   <script src="assets/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
   <script src="assets/js/jquery.isotope.min.js"></script>
-  <script src="assets/js/owl-carousel/owl.carousel.js"></script>
   <script>
-    // Owl carousel stuff
     $(document).ready(function(){
-      $("#sample-day-carousel").owlCarousel({
-        autoPlay: 3000, //Set AutoPlay to 3 seconds
-        items : 2,
-        itemsDesktop : [1199,3],
-        itemsDesktopSmall : [979,3]
-      });
       // Bootstrap tooltips
       $('[data-toggle="tooltip"]').tooltip();
       // Fancybox galllery
@@ -312,7 +271,6 @@
         });
       });
     });
-
   </script>
 </body>
 </html>
