front page mostly done

--- a/public/index.html
+++ b/public/index.html
@@ -100,8 +100,12 @@
 	<section class="wrapper-lg bg-alt">
 		<div class="container">
 			<div class="row">
+				<div class="col-sm-12 text-center h2-resize">
+					<h2>About Code and Mushroom Learning</h2>
+				</div>
+			</div>
+			<div class="row">
 				<div class="col-sm-6">
-					<h2>Why Code?</h2>
 					<div class="videoWrapper">
 						<iframe width="560" height="315" src="//www.youtube.com/embed/nKIu9yen5nc?rel=0" frameborder="0" allowfullscreen></iframe>
 					</div>
@@ -151,8 +155,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h1>Coding Programs</h1>
-					<p class="lead">There's a plethora of thingies we can do for you</p>
+					<h1>Mushroom Menu</h1>
+					<p class="lead">Did you know there are around 100,000 species of fungi that have been formally identified?</p>
 					<br class="spacer-lg">
 				</div>
 				<div class="col-sm-3">
