--- a/public/workshops.html
+++ b/public/workshops.html
@@ -138,7 +138,7 @@
             </div><!-- /.plan -->
           </div>
           <div class="col-md-12">
-            <div class="typeform-widget" data-url="https://mushroomlearning.typeform.com/to/BduU75" data-text="workshop-request" style="width:100%;height:318px;"></div>
+            <div class="typeform-widget" data-url="https://mushroomlearning.typeform.com/to/BduU75" data-text="workshop-request" style="width:100%;height:318px;overflow:hidden;"></div>
             <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
           </div>
         </div>
