faq content done

--- a/public/faq.html
+++ b/public/faq.html
@@ -78,18 +78,12 @@
       <div class="row">
         <section class="page-block faq">
             <div class="container text-right">
-              <div class="col-sm-12 col-md-12">
-              <section class="top-nav-callout2">
-                <a href="/summer-camp"><img src="assets/images/flaticons/badge-6.png" alt="Mushroom Learning summer camp"></a>
-                <a href="/workshops"><img src="assets/images/flaticons/badge-7.png" alt="Mushroom Learning summer camp"></a>
-              </section>
-            </div>
-            <div class="col-sm-11 col-md-10 pull-left">
-              <h1 class="heading-center new-page-heading h1-resizing">Mushroom Learning -- FAQ</h1>
-            </div>
+              <div class="col-sm-11 col-md-10 pull-left h2-resize text-center" style="padding-left:20%;">
+                <h2 class="heading-center new-page-heading">FAQ</h2>
+              </div>
               <div class="row">
                 <div class="col-lg-3 col-md-4 col-sm-4">
-                  <img class="img-center" src="assets/images/flaticons/faq.png" alt="Mushroom Learning FAQ"/>
+                  <img class="img-center" src="assets/images/faq.png" alt="Mushroom Learning FAQ"/>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-8">
                   <div class="panel-group text-left" id="accordion-faq">
@@ -144,188 +138,6 @@
           </section>
       </div><!-- /.row -->
     </div><!-- /.container -->
-  </section>
-
-  <section class="wrapper-lg" id="team">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h1>This Our Team</h1>
-          <p class="lead">You bet we are pretty proud</p>
-        </div>
-        <div class="col-lg-12">
-          <!--Team Members-->
-          <ul class="thumbnail-badges">
-            <li class="col-md-4 col-md-offset-2">
-              <div class="thumbnail ">
-                <img class="img-circle" src="assets/images/mike.jpg" alt="">
-                <div class="caption">
-                  <h4>Michael</h4>
-                  <p class="ribbon">Ugly Duckling</p>
-                  <p>Michael brings a passion for education and years of experience in the educational technology space beginning at <a href="http://www.revolutionprep.com" target="_blank">Revolution Prep</a> and most recently at <a href="http://www.edlio.com" target="_blank">Edlio</a>. He is excited to be a part of a great team and help make education accessible to all.</p>
-                  <ul class="social-profiles">
-                    <li><a class="twitter" href="#"><i class="icon-twitter"></i></a></li>
-                    <li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
-                    <li><a class="google-plus" href="#"><i class="icon-google-plus"></i></a></li>
-                    <li><a class="pinterest" href="#"><i class="icon-pinterest"></i></a></li>
-                  </ul>
-                </div>
-              </div>
-            </li>
-            <li class="col-md-4">
-              <div class="thumbnail">
-                <img class="img-circle" src="assets/images/muhammad.jpg" alt="">
-                <div class="caption">
-                  <h4>Muhammad</h4>
-                  <p class="ribbon">Swan</p>
-                  <p>A former Teen Jeopardy! semi-finalist, Muhammad has been involved with technology and education in many ways. He was previously a product manager and mentor at <a href="http://www.revolutionprep.com" target="_blank">Revolution Prep</a>, a developer at <a href="http://www.fullscreen.net" target="_blank">Fullscreen</a>, and most recently helped <a href="http://www.makersquare.com" target="_blank">MakerSquare</a> design curriculum for kids.</p>
-                  <ul class="social-profiles">
-                    <li><a class="twitter" href="#"><i class="icon-twitter"></i></a></li>
-                    <li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
-                    <li><a class="google-plus" href="#"><i class="icon-google-plus"></i></a></li>
-                    <li><a class="pinterest" href="#"><i class="icon-pinterest"></i></a></li>
-                  </ul>
-                </div>
-              </div>
-            </li>
-          </ul><!-- /.thumbnail-badges -->
-        </div><!-- /.col-gl-12 -->
-      </div><!-- /.row -->
-    </div><!-- /.container -->
-  </section>
-
-  <!-- Pricing -->
-  <section class="wrapper-lg bg-alt" id="pricing">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h1>Pricing</h1>
-          <p class="lead">Choice is yours</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="plan">
-            <div class="plan-name">
-              <h3>Starter Pack</h3>
-            </div>
-            <div class="plan-info">
-              <p>Get a helping hand with our products in the members only premium area</p>
-            </div>
-            <div class="plan-price">
-              <h1>$12 <small>/month</small></h1>
-            </div>
-            <ul class="plan-features">
-              <li><i class="icon-ok"></i> Unlimited Support <i class="icon-info-sign" data-toggle="tooltip" data-original-title="Restrictions apply"></i></li>
-              <li><i class="icon-ok"></i> Basic Options</li>
-              <li><i class="icon-remove"></i> 100GB Storage</li>
-              <li><i class="icon-remove"></i> Ad Free Streaming</li>
-            </ul>
-            <div class="plan-cta">
-              <p>Unlimited ad-free streaming, unlimited viewers</p>
-              <br class="spacer-md">
-              <a href="#" class="btn btn-default btn-large">Get it now! &raquo;</a>
-            </div>
-          </div><!-- /.plan -->
-        </div>
-        <div class="col-md-4">
-          <div class="plan">
-            <div class="plan-name">
-              <h3>Starter Pack</h3>
-            </div>
-            <div class="plan-info">
-              <p>Get a helping hand with our products in the members only premium area</p>
-            </div>
-            <div class="plan-price">
-              <h1>$24 <small>/month</small></h1>
-            </div>
-            <ul class="plan-features">
-              <li><i class="icon-ok"></i> Unlimited Support <i class="icon-info-sign" data-toggle="tooltip" data-original-title="Restrictions apply"></i></li>
-              <li><i class="icon-ok"></i> Basic Options</li>
-              <li><i class="icon-remove"></i> 100GB Storage</li>
-              <li><i class="icon-remove"></i> Ad Free Streaming</li>
-            </ul>
-            <div class="plan-cta">
-              <p>Unlimited ad-free streaming, unlimited viewers</p>
-              <br class="spacer-md">
-              <a href="#" class="btn btn-default btn-large">Get it now! &raquo;</a>
-            </div>
-          </div><!-- /.plan -->
-        </div>
-        <div class="col-md-4">
-          <div class="plan plan-featured">
-            <div class="plan-name">
-              <h3>Starter Pack</h3>
-            </div>
-            <div class="plan-info">
-              <p>Get a helping hand with our products in the members only premium area</p>
-            </div>
-            <div class="plan-price">
-              <h1>$48 <small>/month</small></h1>
-            </div>
-            <ul class="plan-features">
-              <li><i class="icon-ok"></i> Unlimited Support <i class="icon-info-sign" data-toggle="tooltip" data-original-title="Restrictions apply"></i></li>
-              <li><i class="icon-ok"></i> Basic Options</li>
-              <li><i class="icon-remove"></i> 100GB Storage</li>
-              <li><i class="icon-remove"></i> Ad Free Streaming</li>
-            </ul>
-            <div class="plan-cta">
-              <p>Unlimited ad-free streaming, unlimited viewers</p>
-              <br class="spacer-md">
-              <a href="#" class="btn btn-primary btn-large">Get it now! &raquo;</a>
-            </div>
-          </div><!-- /.plan -->
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- contact -->
-  <section class="wrapper-lg" id="contact">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <h2>Contact Us</h2>
-          <p class="lead">You can reach us any time</p>
-          <div class="well">
-            <address>
-              <strong>Aventador Industries</strong><hr>
-              795 Folsom Ave, Suite 600<br>
-              San Francisco, CA 94107<br>
-              <abbr title="Telephone Number">Tel.:</abbr> (123) 456-7890br<br>
-              <a href="mailto:#">info@graphikaria.com</a><hr>
-            </address>
-            <p>We are open monday through friday from 8:00 am to 6:00 pm and saturdays from 10:00 am to 4:00 pm we'll be glad to have you here.</p>
-          </div>
-        </div>
-        <div class="col-md-8">
-          <form role="form">
-            <fieldset>
-              <div class="form-group">
-                <label class="hidden" for="name">Name:</label>
-                <input class="form-control" type="text" id="name" placeholder="Name">
-              </div>
-              <div class="form-group">
-                <label class="hidden" for="email">Email:</label>
-                <input class="form-control" type="email" id="email" placeholder="Email">
-              </div>
-              <div class="form-group">
-                <label class="hidden" for="company">Company:</label>
-                <input class="form-control" type="text" id="company" placeholder="Company">
-              </div>
-              <div class="form-group">
-                <label class="hidden" for="comment">Comment:</label>
-                <textarea class="form-control" rows="7" id="comment" placeholder="Your comments..."></textarea>
-              </div>
-              <label class="checkbox">
-                <input type="checkbox"> CC to myself
-              </label>
-              <button type="submit" class="btn btn-large btn-primary">Send Now <i class="icon-chevron-sign-right"></i></button>
-            </fieldset>
-          </form>
-        </div>
-      </div>
-    </div>
   </section>
 
   <!-- Footer -->
